codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__tests__upstream_parity__native_function_output.snap
---
source: tui/src/app_shell/upstream_parity_tests.rs
assertion_line: 64
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ CODEX  Started a fullscreen app shell backed │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
          by app-server turns.                  │ │▎+ New session  Ctrl+N
 ▎ PLAN  1. Build shell                         ┃ │▎loading sessions
         2. Wire transcript                     ┃ │
         3. Render dashboard                    ┃ │▎◆ THREAD
                                                ┃ │▎stage-one
 ▌ tool exec just test -p codex-tui             ┃ │▎id 01900000-0000-7000-8000-000000000001
                                                ┃ │▎resume, fork, archive, delete in session list
 ▌ edited 3 files +128 -24                      ┃ │
                                                ┃ │
 ▌ tool functions/lookup                        ┃ │
                                                ┃ │
   ▌ output Found the requested record.         ┃ │
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
