codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__tests__upstream_parity__submission_during_session_transition.snap
---
source: tui/src/app_shell/upstream_parity_tests.rs
assertion_line: 188
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28))"
---

  Dashboard  ◆ BC                         gpt-5-codex ▾   default ▾   default ▾  ◐ changing session
────────────────────────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ SYSTEM  Better Codex app shell
 ▎ YOU  Create a divergent standalone TUI.

 ▎ CODEX  Started a fullscreen app shell backed by app-server turns.
 ▎ PLAN  1. Build shell
         2. Wire transcript
         3. Render dashboard

 ▌ tool exec just test -p codex-tui

 ▌ edited 3 files +128 -24
 ▎ STATUS  wait for the session transition before sending a message

 ▎ CODEX  The new shell owns the fullscreen surface.



╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  ● RUNNING  1:16  [1: draft.png]                                                        │
│> Keep this draft                                                                                 │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
